2004-11-04  Rodrigo Moya <rodrigo@novell.com>

	* org-gnome-mail-to-task.eplug.in: fixed description and added
	author's info, to display correctly on the plugin manager.

2004-11-03  Not Zed  <NotZed@Ximian.com>

	* org-gnome-mail-to-task.eplug.in: revert rodrigo's last fix, it should
	actually work now, i hope.

2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist .eplugin.in file

2004-10-29  Rodrigo Moya <rodrigo@novell.com>

	* org-gnome-mail-to-task.eplug.in: fix folder view popup id again.

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* org-gnome-mail-to-task.eplug.in: fix folder view popup id.

2004-10-21  Rodrigo Moya <rodrigo@novell.com>

	* mail-to-task.c (set_attendees, set_organizer): new functions.
	(do_mail_to_task): set attendees and organizer on the task from the
	recipients in the mail message.

	* org-gnome-mail-to-task.eplug.in: use correct icon.

2004-10-21  Rodrigo Moya <rodrigo@novell.com>

	* org-gnome-mail-to-task.eplug.in: fixed to make the plugin show
	up in the correct place.

2004-10-21  Rodrigo Moya <rodrigo@novell.com>

	* mail-to-task.c: implemented plugin for converting selected
	mails to tasks.