@@ -1,3 +1,9 @@
+2005-01-14  Rodrigo Moya <rodrigo@novell.com>
+
+	* mail-to-task.c (set_description): new function to correctly
+	retrieve the body of the message.
+	(do_mail_to_task): call set_description.
+
 2004-11-04  Rodrigo Moya <rodrigo@novell.com>
 
 	* org-gnome-mail-to-task.eplug.in: fixed description and added
